added review section and contact us

--- a/Front/src/styles/header.css
+++ b/Front/src/styles/header.css
@@ -17,7 +17,7 @@ span {
 .heart {
   margin-right: 0.67px;
   vertical-align: middle;
-  color: var(--black);
+  color: var(--green);
   font-size: 30px;
 }
 
