--- a/Front/src/App.css
+++ b/Front/src/App.css
@@ -33,11 +33,18 @@ html {
   padding: 2rem 9%;
 }
 
-/* .section:nth-child(odd) {
-  background: #f5f5f5;
-} */
 
 h1 {
   margin: 10px;
   text-align: center;
+}
+
+.heading {
+  text-align: center;
+  padding-bottom: 2rem;
+  text-shadow: var(--text-shadow);
+  text-transform: uppercase;
+  color: var(--black);
+  font-size: 3rem;
+  letter-spacing: .2rem;
 }
