--- a/Front/src/styles/services.css
+++ b/Front/src/styles/services.css
@@ -1,10 +1,14 @@
 @import url('../App.css');
 
+#services {
+    background-color: #f5f5f5;
+}
+
 .box-container {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 2rem;
-    background: #fff;
+    background: #f5f5f5;
 }
 
 .box {
