--- a/Front/src/styles/contact.css
+++ b/Front/src/styles/contact.css
@@ -9,6 +9,17 @@
     padding: 10px;
 }
 
+button {
+    margin: 5px;
+    padding: 5px;
+    width: 30%;
+    background-color: #004c6d;
+    border: none;
+    border-radius: 5px;
+    color: white;
+    text-align: center;
+}
+
 /* .contact-info ul {
     list-style-type: none;
 }
