--- a/Front/src/App.css
+++ b/Front/src/App.css
@@ -48,3 +48,35 @@ h1 {
   font-size: 3rem;
   letter-spacing: .2rem;
 }
+
+.btn {
+  display: inline-block;
+  margin-top: 1rem;
+  padding: .5rem;
+  padding-left: 1rem;
+  border: var(--border);
+  border-radius: .5rem;
+  box-shadow: var(--box-shadow);
+  color: var(--green);
+  cursor: pointer;
+  background: #fff;
+  font-size: 20px;
+  vertical-align: middle;
+}
+
+.btn:hover {
+  color: var(--green);
+  background: #fff;
+  margin-left: 1rem;
+}
+
+.icon-right {
+  color: var(--green);
+  vertical-align: middle;
+}
+
+.icon-right:hover {
+  color: var(--green);
+  background: #fff;
+  vertical-align: middle;
+}
