--- a/Front/src/styles/services.css
+++ b/Front/src/styles/services.css
@@ -8,7 +8,7 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 2rem;
-    background: #f5f5f5;
+    background: #f5f5f5ff;
 }
 
 .box {
@@ -36,22 +36,4 @@
     color: var(--light-color);
     font-size: 1.3rem;
     line-height: 1.5;
-}
-
-.box .btn {
-    display: inline-block;
-    padding: 10px 20px;
-    background-color: var(--green);
-    color: #fff;
-    text-decoration: none;
-    border: none;
-    border-radius: 5px;
-    font-weight: bold;
-    cursor: pointer;
-    margin-top: 1rem;
-}
-
-.right {
-    text-align: right;
-    vertical-align: middle;
 }
