made some changes

--- a/Front/src/styles/landing.css
+++ b/Front/src/styles/landing.css
@@ -3,5 +3,11 @@
 .home {
     width: 50%;
     margin-left: 30rem;
+}
 
+@media (max-width: 700px) {
+    .home {
+        width: 50%;
+        margin-left: 15rem;
+    }
 }
