--- a/Front/src/styles/header.css
+++ b/Front/src/styles/header.css
@@ -6,19 +6,33 @@
   justify-content: space-between;
   padding: 20px;
   background-color: #f5f5f5;
+  position: sticky;
+  top: 0;
+  z-index: 100;
+
 }
 
-span {
+.title {
   margin-left: 10px;
   color: var(--black);
 }
 
+
 .icons,
 .heart {
-  margin-right: 0.67px;
   vertical-align: middle;
   color: var(--green);
   font-size: 30px;
+}
+
+.span-link {
+  font-weight: 400;
+  color: var(--black);
+}
+
+.icons {
+  margin-right: 2px;
+  cursor: pointer;
 }
 
 .link {
@@ -67,6 +81,7 @@ span {
   .link {
     margin-right: 30px;
   }
+
 }
 
 @media (max-width: 855px) {
@@ -123,10 +138,9 @@ span {
   }
 
   .auth-buttons {
-    align-self: center;
-    margin-top: -10px;
-    margin-left: 80px;
+    display: none;
   }
+
 }
 
 @media (min-width: 701px) {
@@ -134,4 +148,5 @@ span {
   #menu-btn {
     display: none;
   }
+
 }
