--- a/Front/src/styles/login.css
+++ b/Front/src/styles/login.css
@@ -10,18 +10,21 @@ form {
     margin: 5% 20%;
     font-weight: 700;
     background-color: var(--green);
-
+    /* width: 80%; */
 }
 
 input,
-textarea {
-    margin: 20px;
-    width: 80%;
+textarea,
+select {
+    margin: 5px;
+    width: 50%;
     height: 50px;
     border-radius: 5px;
     border: 1px solid var(--green);
     padding: 5px;
     font-weight: 500;
+    text-transform: none;
+    /* text-align: center; */
 }
 
 h3 {
