--- a/Front/src/styles/sidebar.css
+++ b/Front/src/styles/sidebar.css
@@ -1,30 +1,26 @@
 .sidebar {
-    display: flex;
-    flex-direction: column;
     border: 1px solid var(--green);
-    border-radius: .5rem;
+    border-radius: 0.5rem;
     margin-left: 10px;
-
+    transition: width 0.3s ease;
+    /* Add transition for smooth animation */
+    width: 200px;
+    /* Initial width */
 }
 
 .sidebar div {
     margin-bottom: 10px;
-    padding-left: 10px;
-    padding-right: 10px;
-
 }
 
-.side-name {
-    font-size: 15px;
-    color: var(--green);
-    vertical-align: middle;
-    margin-bottom: 10px;
-    padding-left: 10px;
-    padding-right: 10px;
+.span-side {
+    margin-left: 10px;
+    opacity: 1;
+    transition: opacity 0.3s ease;
+    font-weight: 600;
 }
 
 .icons-side {
     font-size: 20px;
     color: var(--green);
-
+    vertical-align: middle;
 }
