made changes to dashboard

--- a/Front/src/App.css
+++ b/Front/src/App.css
@@ -16,7 +16,7 @@
 :root {
   --green: #067a5e;
   --black: #444;
-  --light-color: #777;
+  --light-color: #0e0d0d;
   --box-shadow: .5rem .5rem 0 rgba(22, 160, 133, .2);
   --text-shadow: .4rem .4rem 0 rgba(0, 0, 0, .2);
   --border: .2rem solid var(--green);
