--- a/Front/src/styles/appt.css
+++ b/Front/src/styles/appt.css
@@ -1,7 +1,8 @@
 table {
     width: 100%;
     border-collapse: collapse;
-    margin-bottom: 15px;
+    /* margin-bottom: 15px; */
+    /* margin-left: 20%; */
 }
 
 table tr th,
