made changes to the dashboard

--- a/Front/src/styles/dash.css
+++ b/Front/src/styles/dash.css
@@ -9,3 +9,34 @@
     flex: 1;
     margin-left: 20px;
 }
+
+.card {
+    display: flex;
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
+    padding: 20px;
+    flex-direction: column;
+}
+
+.card-body {
+    flex: 1;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    margin-bottom: 20px;
+    padding: 20px;
+    margin-left: 20px;
+}
+
+.card-title {
+    padding-top: 10px;
+}
+
+.icon-dash {
+    width: 50px;
+    height: 100px;
+    margin-right: 20px;
+    margin-top: 20px;
+    float: right;
+    color: var(--green);
+}
