--- a/Front/src/styles/appt.css
+++ b/Front/src/styles/appt.css
@@ -1,8 +1,7 @@
 table {
     width: 100%;
     border-collapse: collapse;
-    /* margin-bottom: 15px; */
-    /* margin-left: 20%; */
+    table-layout: auto;
 }
 
 table tr th,
