--- a/Front/src/styles/appt.css
+++ b/Front/src/styles/appt.css
@@ -20,3 +20,11 @@ table tr th {
 table tr:nth-child(even) {
     background-color: #f5f5f5;
 }
+
+.form{
+    background-color: #ddd;
+}
+
+.form input{
+    margin: 10px;
+}
